--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
-body {
-  
+
+html {
+  box-sizing: border-box;
+
+}
+
+.header {
+  background-color: #171717;
+}
+
+.link-reset {
+  text-decoration: none;
+  color: inherit;
+}
+
+.list-reset {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
