--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,20 @@ html {
 }
 
 /* #endregion */
+
+/* about */
+
+.about {
+  background-color: #171717;
+}
+
+.about-content {
+  text-align: center;
+}
+.about-title,
+.about-descr {
+  width: 745px;
+  text-align: center;
+  color: #fff;
+}
+
