--- a/css/style.css
+++ b/css/style.css
@@ -29,9 +29,8 @@ html {
   font-display: swap;
 }
 
-
 body {
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  font-family: "Montserrat", Arial, Helvetica, sans-serif;
 }
 * {
   margin: 0;
@@ -86,9 +85,10 @@ body {
 
 /* #endregion */
 
-
 /* #region HERO*/
-
+.hero {
+  background-color: #171717;
+}
 .hero__container {
   max-width: 1300px;
   margin: 0 auto;
@@ -103,4 +103,23 @@ body {
   line-height: 62px;
   color: #fff;
 }
+
+.hero__skill {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 23px;
+  color: #828282;
+}
+
+.hero__avatar {
+  min-width: 650px;
+  min-height: 650px;
+  border: 30px solid #000;
+  border-radius: 50%;
+  background-image: url(../img/avatar.jpg);
+  background-repeat: no-repeat;
+  background-size: 650px 650px;
+}
+
 /* #enregion */
