--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,7 @@ body {
 .hero__container {
   max-width: 1300px;
   margin: 0 auto;
+  padding-top: 96px;
   justify-content: space-between;
   align-items: center;
 }
